[tool.poetry]
name = "coinbase_test_problem"
version = "0.1.0"
description = ""
authors = ["ProRock"]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.3"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
